BGE patch #18181 commited: Fixing some blenderplayer arguments (-c, -w, -f).